# carecircle-casper

./: .gitignore  RAILWAY_DEPLOYMENT.md  README.md  package-lock.json  package.json
apps/api/: .dockerignore  Dockerfile  RAILWAY_VOLUME_SETUP.md  carecircle-application.db-shm  carecircle-application.db-wal  carecircle.db-shm  carecircle.db-wal  package.json  railway.toml
apps/api/src/: db.js  index.js
apps/web/: .dockerignore  .env.production  Dockerfile  index.html  nginx.conf  package.json  vite.config.js
apps/web/src/: App.jsx  styles.css
apps/web/src/lib/: api.js  casper.js
contracts/carecircle/: Cargo.toml  README.md
contracts/carecircle/src/: lib.rs
keys/: public_key_hex
scripts/: deploy-contract.sh  deploy-gcloud.sh  quick-deploy.sh  seed-demo.sh  setup-gcloud.sh
