[package]
name = "carecircle"
version = "1.0.0"
edition = "2021"
authors = ["CareCircle Team <team@carecircle.app>"]
description = "Caregiving coordination with verifiable on-chain task completion proofs - Casper Hackathon 2026"
license = "MIT"

[dependencies]
# Pin to specific Odra version for compatibility
odra = "=1.1.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
odra-casper-wasm-env = "=1.1.0"

[dev-dependencies]
odra-test = "=1.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
